objects/Availability_Flag__mdt.object
<CustomObject>
    <description>This metadata is utilized to configure Availability combinations that aid in determining Pricing  and the STP process.</description>
    <fields>
        <fullName>Accessories_Requested__c</fullName>
        <label>Accessories Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Availability_Flag__c</fullName>
        <label>Availability Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NON WM Availability Assumed - Service, Delivery</fullName>
                </value>
                <value>
                    <fullName>NON WM Availability NOT Confirmed - Service, Delivery</fullName>
                </value>
                <value>
                    <fullName>NON WM Availability NOT Confirmed - Service, Delivery, Accessories</fullName>
                </value>
                <value>
                    <fullName>WM Availability Assumed - Delivery</fullName>
                </value>
                <value>
                    <fullName>WM Availability Assumed - Delivery, Accessories</fullName>
                </value>
                <value>
                    <fullName>WM Availability Assumed - Service, Delivery</fullName>
                </value>
                <value>
                    <fullName>WM Availability Assumed - Service, Delivery, Accessories</fullName>
                </value>
                <value>
                    <fullName>WM Availability Confirmed</fullName>
                    <default>true</default>
                    <label>WM Availability Confirmed</label>
                </value>
                <value>
                    <fullName>WM Availability NOT Confirmed - Accessories</fullName>
                </value>
                <value>
                    <fullName>WM Availability NOT Confirmed - Delivery</fullName>
                </value>
                <value>
                    <fullName>WM Availability NOT Confirmed - Delivery, Accessories</fullName>
                </value>
                <value>
                    <fullName>WM Availability NOT Confirmed - Service</fullName>
                </value>
                <value>
                    <fullName>WM Availability NOT Confirmed - Service, Accessories</fullName>
                </value>
                <value>
                    <fullName>WM Availability NOT Confirmed - Service, Delivery</fullName>
                </value>
                <value>
                    <fullName>WM Availability NOT Confirmed - Service, Delivery, Accessories</fullName>
                </value>
                <value>
                    <fullName>Availability could not be confirmed as there is no response from the API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Availability__c</fullName>
        <label>Delivery Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Selected Delivery is as per WM Availability, selected date is within SLA days</fullName>
                    <default>true</default>
                    <label>Selected Delivery is as per WM Availability, selected date is within SLA days</label>
                </value>
                <value>
                    <fullName>Selected Delivery is as per WM Availability, selected date is beyond SLA days but within 30 days</fullName>
                </value>
                <value>
                    <fullName>Selected Delivery is NOT as per WM Availability, selected date is within SLA days</fullName>
                </value>
                <value>
                    <fullName>Selected Delivery is NOT as per WM Availability, selected date is beyond SLA days but within 30 days</fullName>
                </value>
                <value>
                    <fullName>Selected Delivery is NOT as per WM Availability, selected date is beyond 30 days</fullName>
                </value>
                <value>
                    <fullName>Selected Delivery is NOT as per WM Availability, as this is a back dated order</fullName>
                </value>
                <value>
                    <fullName>WM NOT available to Deliver in the area, selected date is within SLA days</fullName>
                </value>
                <value>
                    <fullName>WM NOT available to Deliver in the area, selected date is beyond SLA days but within 30 days</fullName>
                </value>
                <value>
                    <fullName>WM NOT available to Deliver in the area, selected date is beyond 30 days</fullName>
                </value>
                <value>
                    <fullName>WM NOT available to Deliver in the area, as this is a back dated order</fullName>
                </value>
                <value>
                    <fullName>Availability API Errored out</fullName>
                </value>
                <value>
                    <fullName>Availability could not be confirmed as there is no response from the API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluate_STP__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Evaluate STP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Procurement__c</fullName>
        <defaultValue>&quot;Yes&quot;</defaultValue>
        <label>Manual Procurement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Get Price</fullName>
                    <default>true</default>
                    <label>Get Price</label>
                </value>
                <value>
                    <fullName>Don&apos;t Get Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                    <default>true</default>
                    <label>P1</label>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>P4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Availability__c</fullName>
        <label>Service Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Selected Service is as per WM Availability</fullName>
                    <default>true</default>
                    <label>Selected Service is as per WM Availability</label>
                </value>
                <value>
                    <fullName>Selected Service is NOT as per WM Availability</fullName>
                </value>
                <value>
                    <fullName>WM NOT available to Service in the area</fullName>
                </value>
                <value>
                    <fullName>Availability API Errored out</fullName>
                </value>
                <value>
                    <fullName>Availability could not be confirmed as there is no response from the API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Availability Flag</label>
    <pluralLabel>Availability Flags</pluralLabel>
</CustomObject>